[package]
name = "newick"
version = "0.9.0"
edition = "2021"
exclude = [ ".envrc" ]
license = "LGPL-3.0-or-later"
description = "A library to parse, manipulate and generate trees in the Newick format"
homepage = "https://github.com/delehef/newick"
documentation = "https://github.com/delehef/newick"
repository = "https://github.com/delehef/newick"
readme = "README.org"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2"
pest_derive = "2"
sorbus = "0.10"
thiserror = "1"

[package.metadata.release]
tag-prefix = ""
publish = false
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
allow-branch = ["master"]
